--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -40,6 +40,7 @@
     "http-errors": "^1.6.3",
     "js-yaml": "^3.11.0",
     "lodash": "^4.17.11",
+    "on-finished": "^2.3.0",
     "openapi-schema-to-json-schema": "^2.1.0",
     "openapi3-ts": "^1.0.0",
     "path-to-regexp": "^3.0.0",
@@ -59,6 +60,7 @@
     "@types/lodash": "^4.14.106",
     "@types/multer": "^1.3.7",
     "@types/node": "^10.11.2",
+    "@types/on-finished": "^2.3.1",
     "@types/qs": "^6.5.1",
     "multer": "^1.4.1"
   },
